2013-10-05  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* baseboards/unix.exp: Add gdb settings to not use hardware
	watchpoints in sparc64 running GNU/Linux.

2013-06-17  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* runtest.exp (libdirs): New global variable.
	(load_lib): Append libdirs to search_and_load_files directories.
	* doc/ref.xml (load_lib): Document global variable libdirs.
	* doc/dejagnu.texi: Regenerate.
	* testsuite/runtest.all/load_lib.exp: New testcase.
	* Makefile.am (TESTSUITE_FILES): Add new testcase.
	* Makefile.in: Regenerate.

2013-06-15  Ben Elliston  <bje@gnu.org>

	* configure.ac: If DEJAGNU is unset, set it to /dev/null.
	* Makefile.am: Export DEJAGNU.
	* configure: Likewise.
	* Makefile.in: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix typos.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix number of columns in table.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix rendering errors around programlisting.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix spacing before productname.
	* doc/dejagnu.texi: Regenerate.

2013-06-12  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* testsuite/runtest.all/default_procs.tcl (send_log): Use the
	magic "args" parameter name, as expect send_log proc accepts -- as
	a leading option.

2013-06-08  Makoto Fujiwara  <makoto@ki.nu>

	* Makefile.am (pkgdata_DATA): Rename from pkgdata_SCRIPTS.
	(config_DATA): Likewise for config_SCRIPTS.
	(baseboard_DATA): Likewise for baseboard_SCRIPTS.
	(EXTRA_DIST): Remove pkgdata_SCRIPTS, config_SCRIPTS and
	baseboard_SCRIPTS.
	* Makefile.in: Regenerate.

2013-06-08  Ben Elliston  <bje@gnu.org>

	* configure: Regenerate with autoconf 2.69.
	* aclocal.m4: Regenerate.
